# 7zip

./: .gitignore  7z.sln  Au7zUnpacker.sln  CMakeLists.txt
.github/: CODEOWNERS
.github/workflows/: 7zip-build.yml  build-reusable.yml  build.yml  publish.yml
C/: 7zVersion.h  7zVersion.rc
CPP/7zip/UI/Common/: ArchiveExtractCallback.cpp  ArchiveExtractCallback.h  Extract.cpp  Extract.h  ScannerCommonFunctions.cpp  ScannerCommonFunctions.h
CPP/7zip/UI/Console/: Console.vcxproj  Console.vcxproj.filters  Main.cpp  console.def
CPP/7zip/UI/FileManager/: resource.rc
CPP/7zip/UI/GUI/: resource.rc
CPP/Windows/: DLL.cpp
Scripts/: build.ps1  getVersion.ps1  utils.ps1
Test_7zip/: Test_7zip.vcxproj  Test_7zip.vcxproj.filters  test_7zip.cpp
